--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 
 # must be unique in a given SonarQube instance
-sonar.projectKey=ApathyInMyHeart_testirovanielaba1v2
-sonar.organization=apathyinmyheart
+sonar.projectKey=monvex_tests_lab1
+sonar.organization=monvex
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 #sonar.projectName=gtest
 #sonar.projectVersion=1.1
